improving build tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,14 +10,14 @@
             "args": [
                 "PLATFORM=PLATFORM_DESKTOP",
                 "BUILD_MODE=DEBUG",
-                "PROJECT_NAME=${fileBasenameNoExtension}",
+                "PROJECT_NAME=main",
                 //"OBJS=${fileBasenameNoExtension}.cpp"
             ],
             "windows": {
                 "command": "mingw32-make.exe",
                 "args": [
                     "RAYLIB_PATH=C:/raylib/raylib",
-                    "PROJECT_NAME=${fileBasenameNoExtension}",
+                    "PROJECT_NAME=main",
                     //"OBJS=${fileBasenameNoExtension}.cpp",
                     "BUILD_MODE=DEBUG"
                 ],
@@ -25,7 +25,7 @@
             "osx": {
                 "args": [
                     "RAYLIB_PATH=<path_to_raylib>/raylib",
-                    "PROJECT_NAME=${fileBasenameNoExtension}",
+                    "PROJECT_NAME=main",
                     //"OBJS=${fileBasenameNoExtension}.cpp",
                     "BUILD_MODE=DEBUG"
                 ],
@@ -44,21 +44,21 @@
             "command": "make",
             "args": [
                 "PLATFORM=PLATFORM_DESKTOP",
-                "PROJECT_NAME=${fileBasenameNoExtension}",
+                "PROJECT_NAME=main",
                 //"OBJS=${fileBasenameNoExtension}.cpp"
             ],
             "windows": {
                 "command": "mingw32-make.exe",
                 "args": [
                     "RAYLIB_PATH=C:/raylib/raylib",
-                    "PROJECT_NAME=${fileBasenameNoExtension}",
+                    "PROJECT_NAME=main",
                     //"OBJS=${fileBasenameNoExtension}.cpp"
                 ],
             },
             "osx": {
                 "args": [
                     "RAYLIB_PATH=<path_to_raylib>/raylib",
-                    "PROJECT_NAME=${fileBasenameNoExtension}",
+                    "PROJECT_NAME=main",
                     //"OBJS=${fileBasenameNoExtension}.cpp"
                 ],
             },
