spring mesh cube setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
 		"typeinfo": "cpp",
 		"iomanip": "cpp",
 		"ctime": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"unordered_set": "cpp"
 	}
 }
