--- a/PhysicsSandbox/PhysicsSandbox.vcxproj.filters
+++ b/PhysicsSandbox/PhysicsSandbox.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\textures">
       <UniqueIdentifier>{290e8f61-dabb-48fc-a90f-4cff77890b48}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\old">
+      <UniqueIdentifier>{d5cb0528-e26c-4b71-b05c-8a0dd7997a14}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -27,7 +30,7 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Shader.cpp">
+    <ClCompile Include="ShaderProgram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stb_image.cpp">
@@ -35,6 +38,30 @@
     </ClCompile>
     <ClCompile Include="TextureLoader.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="old\collider.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\logger.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\object3d.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\plane.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\sphere.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\springmesh.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\springmeshcube.cpp">
+      <Filter>Source Files\old</Filter>
+    </ClCompile>
+    <ClCompile Include="old\util.cpp">
+      <Filter>Source Files\old</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -61,11 +88,35 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Shader.h">
+    <ClInclude Include="ShaderProgram.h">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="old\collider.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\logger.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\object3d.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\plane.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\sphere.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\springmesh.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\springmeshcube.h">
+      <Filter>Source Files\old</Filter>
+    </ClInclude>
+    <ClInclude Include="old\util.h">
+      <Filter>Source Files\old</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
